--- a/Content/Settings/Input Settings.json
+++ b/Content/Settings/Input Settings.json
@@ -1,7 +1,7 @@
 {
 	"ID": "f4c1c67842f6b745a6976aa8e7eff360",
 	"TypeName": "FlaxEditor.Content.Settings.InputSettings",
-	"EngineBuild": 6213,
+	"EngineBuild": 6215,
 	"Data": {
 	"ActionMappings": [
 		{
@@ -10,6 +10,14 @@
 			"Key": 0,
 			"MouseButton": 1,
 			"GamepadButton": 14,
+			"Gamepad": 0
+		},
+		{
+			"Name": "Jump",
+			"Mode": 1,
+			"Key": 32,
+			"MouseButton": 0,
+			"GamepadButton": 0,
 			"Gamepad": 0
 		}
 	],
