--- a/Content/Settings/Input Settings.json
+++ b/Content/Settings/Input Settings.json
@@ -19,6 +19,22 @@
 			"MouseButton": 0,
 			"GamepadButton": 0,
 			"Gamepad": 0
+		},
+		{
+			"Name": "Gravity clockwise",
+			"Mode": 0,
+			"Key": 69,
+			"MouseButton": 3,
+			"GamepadButton": 0,
+			"Gamepad": 0
+		},
+		{
+			"Name": "Gravity counterclockwise",
+			"Mode": 0,
+			"Key": 81,
+			"MouseButton": 1,
+			"GamepadButton": 0,
+			"Gamepad": 0
 		}
 	],
 	"AxisMappings": [
@@ -140,6 +156,18 @@
 			"Sensitivity": 1.0,
 			"Gravity": 1.0,
 			"Scale": -4.0,
+			"Snap": false
+		},
+		{
+			"Name": "Gravity vertical",
+			"Axis": 2,
+			"Gamepad": 0,
+			"PositiveButton": 16,
+			"NegativeButton": 17,
+			"DeadZone": 0.19,
+			"Sensitivity": 1.0,
+			"Gravity": 1.0,
+			"Scale": 1.0,
 			"Snap": false
 		}
 	]
