--- a/Content/Settings/Input Settings.json
+++ b/Content/Settings/Input Settings.json
@@ -1,7 +1,7 @@
 {
 	"ID": "f4c1c67842f6b745a6976aa8e7eff360",
 	"TypeName": "FlaxEditor.Content.Settings.InputSettings",
-	"EngineBuild": 6215,
+	"EngineBuild": 6216,
 	"Data": {
 	"ActionMappings": [
 		{
@@ -33,6 +33,14 @@
 			"Mode": 0,
 			"Key": 81,
 			"MouseButton": 1,
+			"GamepadButton": 0,
+			"Gamepad": 0
+		},
+		{
+			"Name": "Reset gravity",
+			"Mode": 1,
+			"Key": 82,
+			"MouseButton": 0,
 			"GamepadButton": 0,
 			"Gamepad": 0
 		}
